[gd_scene load_steps=4 format=3 uid="uid://bd6khcllsurdi"]

[ext_resource type="PackedScene" path="res://userInterface/Title.tscn" id="1"]
[ext_resource type="PackedScene" path="res://userInterface/But_ChangeScene.tscn" id="2"]
[ext_resource type="Script" path="res://screens/Character_Load.gd" id="3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0

[node name="Title" parent="." instance=ExtResource("1")]
layout_mode = 0
anchor_left = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
text = "Load Character (temp)"

[node name="But_loadCharacter" type="Button" parent="Title"]
layout_mode = 0
text = "Load Character File"

[node name="But_StartNewGame" parent="Title" instance=ExtResource("2")]
layout_mode = 0
text = "Temp: Start New Game"

[node name="But_ChangeScene" parent="Title" instance=ExtResource("2")]
layout_mode = 0
text = "Temp: Main Menu "

[node name="LoadCharacter_FileDialog" type="FileDialog" parent="."]
access = 1

[connection signal="pressed" from="Title/But_loadCharacter" to="." method="_on_But_loadCharacter_pressed"]
[connection signal="file_selected" from="LoadCharacter_FileDialog" to="." method="_on_LoadCharacter_FileDialog_file_selected"]
